src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Requested_Funding_Amount__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Did account specify amount of $ needed for investment?</inlineHelpText>
        <label>Requested Funding Amount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RightEye__c</fullName>
        <inlineHelpText>Are they interested in RightEye Unit as a part of their agreement</inlineHelpText>
        <label>RightEye</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SAP_Order_Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SAP Order Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Order_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SAP Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Order_Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SAP Order Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales__c</fullName>
        <formula>IF(Up_Sell__c,&quot;Up sell&quot;,&quot;&quot;) + 
IF((Cross_Sell__c || NOT(ISPICKVAL( LOB_Referral__c,&quot;&quot; )) &amp;&amp; Up_Sell__c),&quot;,&quot;,&quot;&quot;) + 
(IF(Cross_Sell__c || NOT(ISPICKVAL( LOB_Referral__c,&quot;&quot; )),&quot;Cross sell&quot;,&quot;&quot;))</formula>
        <label>Sales generated  from</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shift_Opportunity_Account_Name__c</fullName>
        <formula>&quot;Shift Series Phase 1&quot; &amp; &quot;-&quot; &amp; LEFT(Account.Common_Account_Name_Report__c , 43) &amp; &quot;-&quot; &amp;   Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shift Opportunity Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Status__c</fullName>
        <description>Shipping status of Contact Lens Kits, to be populated via integration by SAP.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Shipping Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Single_Vision__c</fullName>
        <inlineHelpText>Profitable practices will be less than 50%</inlineHelpText>
        <label>% Single Vision</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Start_Date_New__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Strategic_AP_Global_RVP_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Strategic AP Global RVP Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Strategic_AP_Global_RVP_Manager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Strategic_Agreement_Approval__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Strategic Agreement Approval</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Funding__c</fullName>
        <label>Total Funding</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Monthly_Lab_Spend__c</fullName>
        <inlineHelpText>Includes VSP and Private Pay from All Labs</inlineHelpText>
        <label>Total Monthly Lab Spend</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tracking_Info__c</fullName>
        <description>Tracking Info of contact lens kit populated via SAP Integration.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Tracking Info</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Up_Sell__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Opportunity an up sell?</description>
        <label>Up-Sell</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VSPOne_Commitment_Year_1__c</fullName>
        <label>VSPOne Commitment Year 1</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VSPOne_Commitment_Year_2__c</fullName>
        <label>VSPOne Commitment Year 2</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VSPOne_Commitment_Year_3__c</fullName>
        <label>VSPOne Commitment Year 3</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VSP_Contact_Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VSP Contact Role</label>
        <referenceTo>Contact_Role__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vision_Care__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vision Care</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>of_VSP_Business__c</fullName>
        <label>% of VSP Business</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>Altair_NR_All_Open_and_Closed_Won</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Planned_Closed_Month__c</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Reason__c</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.New_Release_Opportunity</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Closed Lost,Closed Cancelled</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.NAME</field>
            <operation>contains</operation>
            <value>Altair</value>
        </filters>
        <label>Altair - NR -All Open and Closed Won</label>
    </listViews>
    <listViews>
        <fullName>Altair_NR_specifically_for_NR_xxx</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Planned_Closed_Month__c</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Reason__c</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.New_Release_Opportunity</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Closed Lost,Closed Cancelled,Closed Won</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.NAME</field>
            <operation>contains</operation>
            <value>Altair</value>
        </filters>
        <filters>
            <field>Product_Program__c</field>
            <operation>contains</operation>
            <value>AK</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>contains</operation>
            <value>Florida eye clinic</value>
        </filters>
        <label>Altair - NR Open for NR #xxx</label>
    </listViews>
    <listViews>
        <fullName>Altair_New_Release_I_Manage</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Planned_Closed_Month__c</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>OPPORTUNITY.NEXT_STEP</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.New_Release_Opportunity</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notContain</operation>
            <value>Closed</value>
        </filters>
        <label>Altair - New Release - I Manage</label>
    </listViews>
    <listViews>
        <fullName>Altair_Prospect</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Planned_Closed_Month__c</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>OPPORTUNITY.NEXT_STEP</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.VSP_Opportunity</value>
        </filters>
        <filters>
            <field>Division_Brand__c</field>
            <operation>equals</operation>
            <value>Altair</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Closed Won,Closed Lost,Closed Cancelled</value>
        </filters>
        <label>Altair - Prospect - I Manage</label>
    </listViews>
    <listViews>
        <fullName>Barb_s_Altair_Action</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.PROBABILITY</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Planned_Closed_Month__c</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>OPPORTUNITY.NEXT_STEP</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.VSP_Opportunity</value>
        </filters>
        <filters>
            <field>Division_Brand__c</field>
            <operation>equals</operation>
            <value>Altair</value>
        </filters>
        <filters>
            <field>Product_Program__c</field>
            <operation>contains</operation>
            <value>action</value>
        </filters>
        <label>Altair - 3+ Location Action plan</label>
        <sharedTo>
            <roleAndSubordinates>Altair_General_Manager</roleAndSubordinates>
            <roleAndSubordinates>Altair_IT_Director</roleAndSubordinates>
            <roleAndSubordinates>Altair_Sales_Leadership</roleAndSubordinates>
            <roleAndSubordinates>Altair_Sales_Operations</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>Kscope_Prospects_1K_Claims_5K_Marchon</fullName>
        <columns>VSP_Contact_Role__c</columns>
        <columns>Primary_Contact__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Closed Won,Closed Lost,Closed Cancelled</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.NAME</field>
            <operation>contains</operation>
            <value>Kscope Prospects – 1K Claims/5K Marchon</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.VSP_Opportunity</value>
        </filters>
        <label>Kscope Prospects – 1K Claims/5K Marchon</label>
        <sharedTo>
            <roleAndSubordinates>Eyewear_Executive_Leadership</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Open_Opportunities1</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>Product_Program_Name__c</columns>
        <columns>Start_Date_New__c</columns>
        <columns>Program_Count__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Closed Won,Closed Lost,Closed Cancelled</value>
        </filters>
        <label>My Open Opportunities</label>
        <sharedTo>
            <roleAndSubordinates>Optics_CRM_Support</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Open_Promos</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Program_Count__c</columns>
        <columns>Product_Program_Name__c</columns>
        <columns>Custom_Product_Promotion__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Closed Won,Closed Lost,Closed Cancelled</value>
        </filters>
        <filters>
            <field>Line_of_Business__c</field>
            <operation>equals</operation>
            <value>Optics</value>
        </filters>
        <label>My Open Promos</label>
        <sharedTo>
            <roleAndSubordinates>Optics_CRM_Support</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Opportunities_Closing_Soon</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Opps Created Last 30 days</label>
        <sharedTo>
            <roleAndSubordinates>Optics_CRM_Support</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Opportunities_Closing_This_Month</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>My Opportunities Closing This Month</label>
        <sharedTo>
            <roleAndSubordinates>Optics_CRM_Support</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>New_Release_Opportunity</fullName>
        <active>true</active>
        <businessProcess>New Release Sales Process</businessProcess>
        <description>Used for New Release Opportunities</description>
        <label>New Release Opportunity</label>
    </recordTypes>
    <recordTypes>
        <fullName>Shift_Opportunity</fullName>
        <active>true</active>
        <businessProcess>VSP Sales Process</businessProcess>
        <description>Record type used for Global Business Development Shift Opportunities</description>
        <label>Shift Opportunity</label>
    </recordTypes>
    <recordTypes>
        <fullName>Strategic_Agreement_Opportunity</fullName>
        <active>true</active>
        <businessProcess>Strategic Agreement Sales Process</businessProcess>
        <description>Used for Strategic Agreement Pathways Opportunities</description>
        <label>Strategic Agreement Opportunity</label>
    </recordTypes>
    <recordTypes>
        <fullName>VSP_Opportunity</fullName>
        <active>true</active>
        <businessProcess>VSP Sales Process</businessProcess>
        <label>VSP Opportunity</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Amount_Required_ShiftOpp</fullName>
        <active>true</active>
        <description>The Amount cannot be null when a Shift Opportunity is changed to Closed Won.</description>
        <errorConditionFormula>AND( 
$RecordType.Name = &quot;Shift Opportunity&quot;, 
ISPICKVAL(StageName, &quot;Closed Won&quot;), 
ISBLANK( Amount )
)</errorConditionFormula>
        <errorDisplayField>Amount</errorDisplayField>
        <errorMessage>The Amount cannot be null when a Shift Opportunity is changed to Closed Won.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Amount_Value_Timeframe_Required_ShiftOpp</fullName>
        <active>true</active>
        <description>The Amount Value Timeframe cannot be null when a Shift Opportunity is changed to Closed Won.</description>
        <errorConditionFormula>AND( 
$RecordType.Name = &quot;Shift Opportunity&quot;,
ISPICKVAL(StageName, &quot;Closed Won&quot;), 
ISPICKVAL(Amount_Value_Timeframe__c, &quot;&quot; )
)</errorConditionFormula>
        <errorDisplayField>Amount_Value_Timeframe__c</errorDisplayField>
        <errorMessage>The Amount Value Timeframe cannot be null when a Shift Opportunity is changed to Closed Won.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Competitor_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISPICKVAL( Lost_Reason__c , &quot;Competition&quot;),
ISPICKVAL(Lost_Reason__c, &quot;Cancelled&quot;),
ISNULL( Reason__c ))</errorConditionFormula>
        <errorMessage>Please provide the competitors name in the &quot;Competitor&quot; field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lost_reason_required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISPICKVAL(StageName, &quot;Closed Lost&quot;),
ISPICKVAL(Lost_Reason__c, &quot;&quot;))</errorConditionFormula>
        <errorMessage>Closed Lost opportunities require a &quot;Lost Reason&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VSPR16_SHIFT_CLOSED_OPP_NOT_EDITABLE</fullName>
        <active>true</active>
        <errorConditionFormula>$RecordType.Name = &quot;Shift Opportunity&quot;

&amp;&amp; 

ISPICKVAL(PRIORVALUE(StageName), &quot;Closed Won&quot;)

&amp;&amp;

(ISCHANGED(Name) || 
ISCHANGED( AccountId ) || 
ISCHANGED(Line_of_Business__c) || 
ISCHANGED(Division_Brand__c) || 
ISCHANGED(Product_Program__c) || 
ISCHANGED(NextStep) || 
ISCHANGED(Description) || 
ISCHANGED( CampaignId ) || 
ISCHANGED(StageName) ||
ISCHANGED(Probability)|| 
ISCHANGED(CloseDate) || 
ISCHANGED(Amount) || 
ISCHANGED(Amount_Value_Timeframe__c) || 
ISCHANGED(Project_Type__c) || 
ISCHANGED(Lost_Reason__c) || 
ISCHANGED(LeadSource))

&amp;&amp;

NOT(OR( $Profile.Name = &quot;System Administrator&quot; ,$Profile.Name = &quot;VSP Technical User&quot;, $Profile.Name = &quot;VSP LOB Admin User&quot;))</errorConditionFormula>
        <errorMessage>Opportunities in closed/won status are not editable</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VSPR1_ClosedCancelled</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(PRIORVALUE(StageName), &quot;Closed Cancelled&quot;)

&amp;&amp;
 
ISCHANGED(StageName)

&amp;&amp;

NOT(OR($Profile.Name = &quot;VSP LOB Admin User&quot;, $Profile.Name = &quot;System Administrator&quot;, $Profile.Name = &quot;VSP Technical User&quot;, $Profile.Name = &quot;VSP CRM Support User&quot;))

||

ISPICKVAL(PRIORVALUE(StageName), &quot;Closed Cancelled&quot;) 

&amp;&amp;

(ISCHANGED(Altair__c) ||
ISCHANGED(Amount_Value_Timeframe__c) ||
ISCHANGED(Cross_Sell__c) ||
ISCHANGED(Days_Left__c) ||
ISCHANGED(Division_Brand__c) ||
ISCHANGED(End_Date__c) ||
ISCHANGED(Eyefinity__c) ||
ISCHANGED(LOB_Referral__c) ||
ISCHANGED(Line_of_Business__c) ||
ISCHANGED(Lost_Reason__c) ||
ISCHANGED(Marchon__c) ||
ISCHANGED(New_LOB_Business__c) ||
ISCHANGED(Number_of_Jobs__c) ||
ISCHANGED(Optics__c) ||
ISCHANGED(Planned_Closed_Month__c) ||
ISCHANGED(CampaignId) ||
ISCHANGED(Product_Program__c) ||
ISCHANGED(Product_Program_Name__c) ||
ISCHANGED(Program_Status__c) ||
ISCHANGED(Reason__c) ||
ISCHANGED(Related_Case__c) ||

ISCHANGED(Up_Sell__c) ||
ISCHANGED(Vision_Care__c) ||
ISCHANGED( AccountId ) ||
ISCHANGED(Amount) ||
ISCHANGED(CloseDate) ||
ISCHANGED(Description) ||
ISCHANGED(LeadSource) ||
ISCHANGED(NextStep) ||
ISCHANGED(Name) ||
ISCHANGED( OwnerId )) 

&amp;&amp; 

NOT(OR($Profile.Name = &quot;System Administrator&quot;, $Profile.Name = &quot;VSP Technical User&quot;, $Profile.Name = &quot;VSP CRM Support User&quot;, $Profile.Name = &quot;VSP LOB Admin User&quot;))</errorConditionFormula>
        <errorMessage>You do not have edit permission once Stage is Closed Cancelled. Please contact your Support Admin.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VSPR1_ClosedLost</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(PRIORVALUE(StageName), &quot;Closed Lost&quot;)

&amp;&amp;
 
ISCHANGED(StageName)

&amp;&amp;

NOT(OR($Profile.Name = &quot;VSP LOB Admin User&quot;, $Profile.Name = &quot;System Administrator&quot;, $Profile.Name = &quot;VSP Technical User&quot;, $Profile.Name = &quot;VSP CRM Support User&quot;))

||

ISPICKVAL(PRIORVALUE(StageName), &quot;Closed Cancelled&quot;) 

&amp;&amp;

(ISCHANGED(Altair__c) ||
ISCHANGED(Amount_Value_Timeframe__c) ||
ISCHANGED(Cross_Sell__c) ||
ISCHANGED(Days_Left__c) ||
ISCHANGED(Division_Brand__c) ||
ISCHANGED(End_Date__c) ||
ISCHANGED(Eyefinity__c) ||
ISCHANGED(LOB_Referral__c) ||
ISCHANGED(Line_of_Business__c) ||
ISCHANGED(Lost_Reason__c) ||
ISCHANGED(Marchon__c) ||
ISCHANGED(New_LOB_Business__c) ||
ISCHANGED(Number_of_Jobs__c) ||
ISCHANGED(Optics__c) ||
ISCHANGED(Planned_Closed_Month__c) ||
ISCHANGED(CampaignId) ||
ISCHANGED(Product_Program__c) ||
ISCHANGED(Product_Program_Name__c) ||
ISCHANGED(Program_Status__c) ||
ISCHANGED(Reason__c) ||
ISCHANGED(Related_Case__c) ||

ISCHANGED(Up_Sell__c) ||
ISCHANGED(Vision_Care__c) ||
ISCHANGED( AccountId ) ||
ISCHANGED(Amount) ||
ISCHANGED(CloseDate) ||
ISCHANGED(Description) ||
ISCHANGED(LeadSource) ||
ISCHANGED(NextStep) ||
ISCHANGED(Name) ||
ISCHANGED(OwnerId )) 

&amp;&amp; 

NOT(OR($Profile.Name = &quot;System Administrator&quot;, $Profile.Name = &quot;VSP Technical User&quot;, $Profile.Name = &quot;VSP CRM Support User&quot;, $Profile.Name = &quot;VSP LOB Admin User&quot;))</errorConditionFormula>
        <errorMessage>You do not have edit permission once Stage is Closed Lost.  Please contact your Support Admin.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VSPR1_ClosedWon</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(PRIORVALUE(StageName), &quot;Closed Won&quot;)

&amp;&amp;
 
ISCHANGED(StageName)

&amp;&amp;

NOT(OR($Profile.Name = &quot;VSP LOB Admin User&quot;, $Profile.Name = &quot;System Administrator&quot;, $Profile.Name = &quot;VSP Technical User&quot;, $Profile.Name = &quot;VSP CRM Support User&quot;))

||

ISPICKVAL(PRIORVALUE(StageName), &quot;Closed Cancelled&quot;) 

&amp;&amp;

(ISCHANGED(Altair__c) ||
ISCHANGED(Amount_Value_Timeframe__c) ||
ISCHANGED(Cross_Sell__c) ||
ISCHANGED(Days_Left__c) ||
ISCHANGED(Division_Brand__c) ||
ISCHANGED(End_Date__c) ||
ISCHANGED(Eyefinity__c) ||
ISCHANGED(LOB_Referral__c) ||
ISCHANGED(Line_of_Business__c) ||
ISCHANGED(Lost_Reason__c) ||
ISCHANGED(Marchon__c) ||
ISCHANGED(New_LOB_Business__c) ||
ISCHANGED(Number_of_Jobs__c) ||
ISCHANGED(Optics__c) ||
ISCHANGED(Planned_Closed_Month__c) ||
ISCHANGED(CampaignId) ||
ISCHANGED(Product_Program__c) ||
ISCHANGED(Product_Program_Name__c) ||
ISCHANGED(Program_Status__c) ||
ISCHANGED(Reason__c) ||
ISCHANGED(Related_Case__c) ||

ISCHANGED(Up_Sell__c) ||
ISCHANGED(Vision_Care__c) ||
ISCHANGED( AccountId ) ||
ISCHANGED(Amount) ||
ISCHANGED(CloseDate) ||
ISCHANGED(Description) ||
ISCHANGED(LeadSource) ||
ISCHANGED(NextStep) ||
ISCHANGED(Name) ||
ISCHANGED( OwnerId )) 

&amp;&amp; 

NOT(OR($Profile.Name = &quot;System Administrator&quot;, $Profile.Name = &quot;VSP Technical User&quot;, $Profile.Name = &quot;VSP CRM Support User&quot;, $Profile.Name = &quot;VSP LOB Admin User&quot;))</errorConditionFormula>
        <errorMessage>You do not have edit permission once Stage is Closed Won.  Please contact your Support Admin.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VSPR1_Pending_account</fullName>
        <active>true</active>
        <description>Prevents the closure of an Opportunity on a New, Pending, or Not Approved Account.</description>
        <errorConditionFormula>AND(
OR(
ISPICKVAL(StageName,&quot;Closed Won&quot;), 
ISPICKVAL(StageName,&quot;Closed Lost&quot;)),

OR(
ISPICKVAL(Account.Status__c ,&quot;New&quot;),
ISPICKVAL(Account.Status__c ,&quot;Submit for Approval&quot;),
ISPICKVAL(Account.Status__c ,&quot;Not Approved&quot;),
ISPICKVAL(Account.Status__c ,&quot;Marked for Deletion&quot;)),  
$Profile.Name  &lt;&gt; &quot;System Administrator&quot;)</errorConditionFormula>
        <errorMessage>Opportunities may not be closed on New or Pending Accounts.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VSPR1_StartDateIsSetIschangeEndDate</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
(ISCHANGED(End_Date__c)),
NOT(ISPICKVAL(PRIORVALUE(Product_Program_Name__c), &quot;&quot;)), 


NOT(OR($Profile.Name = &quot;System Administrator&quot;, $Profile.Name = &quot;VSP Technical User&quot;, $Profile.Name = &quot;VSP CRM Support User&quot;, $Profile.Name = &quot;VSP LOB Admin User&quot;)), 

NOT(OR(ISPICKVAL( StageName, &quot;Closed Cancelled&quot;), ISPICKVAL( StageName, &quot;Closed Lost&quot;), ISPICKVAL(StageName, &quot;Closed Won&quot;))))</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>You don&apos;t have permission to change End Date once Start Date is set.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VSPR1_StartDateIsSetIschangeProgramName</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
(ISCHANGED( Start_Date_New__c )),
NOT(ISPICKVAL(PRIORVALUE(Product_Program_Name__c), &quot;&quot;)),

NOT(OR($Profile.Name = &quot;System Administrator&quot;, $Profile.Name = &quot;VSP Technical User&quot;, $Profile.Name = &quot;VSP CRM Support User&quot;, $Profile.Name = &quot;VSP LOB Admin User&quot;)), 

NOT(OR(ISPICKVAL( StageName, &quot;Closed Cancelled&quot;), ISPICKVAL( StageName, &quot;Closed Lost&quot;), ISPICKVAL(StageName, &quot;Closed Won&quot;))))</errorConditionFormula>
        <errorMessage>You do not have permission to change the Start Date once it has been set.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VSPR31_Contact_Lens_Kit_Validate</fullName>
        <active>true</active>
        <description>Validates that Contact Lens Kit can not be null when LOB = Optics and Division = Contact Lenses</description>
        <errorConditionFormula>ISPICKVAL(Line_of_Business__c, &apos;Optics&apos;) &amp;&amp; 
ISPICKVAL(Division_Brand__c, &apos;Contact Lenses&apos;) &amp;&amp; 
ISBLANK(TEXT( Contact_Lens_Kit__c )) &amp;&amp; 
NOT(OR($Profile.Name = &quot;System Administrator&quot;, 
$Profile.Name = &quot;VSP Technical User&quot;))</errorConditionFormula>
        <errorDisplayField>Contact_Lens_Kit__c</errorDisplayField>
        <errorMessage>Contact Lens Kit field is required when Division/Brand is Contact Lenses.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VSPR31_Contact_Lenses_Quantity_Validate</fullName>
        <active>true</active>
        <description>Quantity field is required when Division Brand field = Contact Lenses</description>
        <errorConditionFormula>ISPICKVAL(Division_Brand__c, &apos;Contact Lenses&apos;) &amp;&amp; 
ISBLANK(TEXT(Quantity__c)) &amp;&amp; 
NOT(OR($Profile.Name = &quot;System Administrator&quot;, 
							$Profile.Name = &quot;VSP Technical User&quot;))</errorConditionFormula>
        <errorDisplayField>Quantity__c</errorDisplayField>
        <errorMessage>Quantity field is required when Division Brand is Contact Lenses.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VSPR31_OrderingCLKitsRequiredFields</fullName>
        <active>true</active>
        <description>Enforce fields required to be populated on Opportunity and associated Account in order for the Contact Lens Kit Order to be sent to SAP.</description>
        <errorConditionFormula>AND(NOT(ISBLANK(TEXT(Contact_Lens_Kit__c))),
				ISPICKVAL(StageName,&apos;Closed/Won&apos;),
			OR(
							ISBLANK(AccountId),
						 ISBLANK(Account.ShippingStreet),
							ISBLANK(Account.ShippingCity),
							ISBLANK(Account.ShippingState),
							ISBLANK(Account.ShippingPostalCode)
			))</errorConditionFormula>
        <errorMessage>Ensure this Contact Lens Kit Order is associated with a Business Account that has a valid Physical Address</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VSPR31_RequestedDeliveryDateValidation</fullName>
        <active>true</active>
        <description>Ensures the Requested Delivery Date is no earlier than 14 days out.</description>
        <errorConditionFormula>OR(ISNEW(), ISCHANGED( Requested_Delivery_Date__c))
&amp;&amp;
Requested_Delivery_Date__c &lt; (TODAY()+14)
&amp;&amp;
NOT(OR($Profile.Name  = &apos;System Administrator&apos;, $Profile.Name  = &apos;VSP Technical User&apos;, $Profile.Name  = &apos;VSP Integration User&apos;))</errorConditionFormula>
        <errorMessage>Requested Delivery Date cannot be less than 14 days in the future.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VSPR33_FeedbackProvidedRequired</fullName>
        <active>true</active>
        <description>the picklist value &quot;Yes&quot; is selected from the LOB Feedback field, a value must be entered in the &quot;Feedback Provided&quot; field before the record can be saved.</description>
        <errorConditionFormula>AND( ISPICKVAL( LOB_Feedback__c , &quot;Yes&quot;) , ISBLANK( Feedback_Provided__c ) ,NOT(OR( $Profile.Name = &quot;System Administrator&quot;,
$Profile.Name = &quot;VSP Technical User&quot;)))</errorConditionFormula>
        <errorMessage>Feedback Provided cannot be left blank if LOB Feedback is Yes</errorMessage>
    </validationRules>
</CustomObject>